# salesforce-ai-agent-optimizer

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.es.md  README.it.md  README.md  README.zh-CN.md  SECURITY.md  SKILL.md  VERSIONING.md  pyproject.toml
.agents/skills/salesforce-agent-optimizer/: SKILL.md
.claude/skills/salesforce-agent-optimizer/: SKILL.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  salesforce_skill_gap.yml
.github/instructions/: salesforce-agent-optimizer.instructions.md
.github/skills/salesforce-agent-optimizer/: SKILL.md
.github/workflows/: release.yml  validate.yml
agents/: claude-code.md  github-copilot-instructions.md  openai.yaml  sf-init-project-skill.md  sf-version-update-skill.md
docs/: publishing.md
docs/wiki/: Completion-Artifacts.md  Deletion-Guardrails.md  Home.md  Installation.md  Memory-And-Guidance.md  Packaging-And-Publishing.md  Principles.md  Privacy-And-Security.md  Testing-And-Manifests.md  Version-Updates.md  Versioning.md
evals/: trigger-evals.json
references/: agent-installation.md  agent-instruction-spine.md  agent-tool-registry.json  architecture-solution.md  backend-apex.md  completion-artifacts.md  deletion-guardrails.md  delivery-methodology.md  external-skill-interop.md  field-service-mobile-flow.md  frontend-lwc.md  least-privilege-planning.md  metadata-dependencies.md  official-salesforce-sources.md  privacy-security.md  routing.md  salesforce-current-version.md  salesforce-version.json  sf-agent-cli-commands.md  sf-cli-token-patterns.md  sf-official-command-catalog.json  sf-official-command-catalog.md  testing-and-manifest-guardrails.md  version-update.md
references/products-packages/: index.md
references/products-packages/products/: agentforce.md  commerce-cloud.md  data-360-data-cloud.md  einstein-ai.md  experience-cloud.md  industry-clouds.md  marketing-cloud.md  mobile-development.md  mulesoft.md  net-zero-cloud.md  partner-prm.md  sales-cloud.md  salesforce-cpq.md  service-cloud.md  (+5 more)
references/specialized-guidance/: apex.md  data-operations.md  deploy.md  flow.md  index.md  soql.md
scripts/: build_release_artifacts.py  generate_package_manifest.py  knowledge_history.py  self_test.py  sf_agent_cli.py  sf_catalog_build.py  sf_knowledge_init.py  sf_min.py  sync_agent_instructions.py  validate_skill.py
src/salesforce_agent_optimizer/: __init__.py  cli.py  command_facade.py  command_registry.py  doctor.py  installer.py  knowledge.py  live_tests.py  memory.py  permission_analyzer.py  report.py  soql.py  validation.py  version_context.py
tests/: conftest.py  test_command_registry_facade.py  test_live_salesforce_cli.py  test_packaging_cli.py  test_report.py  test_salesforce_workflows.py  test_skill_validation.py  test_specialized_guidance.py
(+56 files in other folders)
