[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "salesforce-agent-optimizer"
version = "1.0.0"
description = "Frictionless Salesforce Agent Skill for Codex, Claude Code, and GitHub Copilot."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Luca Benedettini" },
]
keywords = [
    "salesforce",
    "agent-skills",
    "codex",
    "claude-code",
    "github-copilot",
    "ai-agents",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pyyaml",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/lucabenedettini/salesforce-ai-agent-optimizer"
Repository = "https://github.com/lucabenedettini/salesforce-ai-agent-optimizer"
Issues = "https://github.com/lucabenedettini/salesforce-ai-agent-optimizer/issues"
Changelog = "https://github.com/lucabenedettini/salesforce-ai-agent-optimizer/blob/main/CHANGELOG.md"

[project.scripts]
sfao = "salesforce_agent_optimizer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
salesforce_agent_optimizer = ["templates/**/*"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    "build",
    "dist",
    "*.egg-info",
    ".venv",
    "venv",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
